--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3"
   }
 }
