--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
     "concurrently": "^7.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
