--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +56,8 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "cypress": "^10.9.0",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
